--- a/flags/CMakeLists.txt
+++ b/flags/CMakeLists.txt
@@ -68,7 +68,7 @@ target_link_options(tc-flags
         >
 )
 
-# target_compile_definitions(tc-flags INTERFACE
-#     $<$<CONFIG:Release>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_INFO>
-#     $<$<CONFIG:Debug>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG>
-# )
+target_compile_definitions(tc-flags INTERFACE
+    $<$<CONFIG:Release>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_INFO>
+    $<$<CONFIG:Debug>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG>
+)
